# NDI-python

./: .cursorrules  .gitignore  AGENTS.md  CHANGELOG.md  DID_PYTHON_UPDATE_INSTRUCTIONS.md  LICENSE  MANIFEST.in  MATLAB_MAPPING.md  PYTHON_PORTING_GUIDE.md  README.md  REPO_AUDIT.md  mkdocs.yml  ndi_install.py  pyproject.toml
.github/workflows/: ci.yml  test-cloud-api.yml  test-symmetry-download.yml  test-symmetry.yml
docs/: getting-started.md  index.md  matlab-migration.md
docs/developer_notes/: NDR_PORTING_INSTRUCTIONS.md  PYTHON_PORTING_GUIDE.md  class_naming_convention.md  ndi_matlab_python_bridge.yaml  ndi_xlang_principles.md  symmetry_tests.md
examples/: integration_demo.py
src/ndi/: __init__.py  __main__.py  cache.py  calculator.py  check.py  class_registry.py  database.py  database_fun.py  database_ingestion.py  dataset.py  doc_comparison.py  document.py  documentservice.py  element_timeseries.py  ido.py  ndi_matlab_python_bridge.yaml  ndi_matlab_python_bridge_database.yaml  ndi_matlab_python_bridge_database_fun.yaml  ndi_matlab_python_bridge_database_ingestion.yaml  neuron.py  openminds_convert.py  preferences.py  query.py  subject.py  validate.py
src/ndi/app/: __init__.py  appdoc.py  markgarbage.py  ndi_matlab_python_bridge.yaml  oridirtuning.py  spikeextractor.py  spikesorter.py
src/ndi/calc/: __init__.py  ndi_matlab_python_bridge.yaml  tuning_fit.py
src/ndi/cloud/: __init__.py  auth.py  client.py  config.py  download.py  exceptions.py  (+6 more)
tests/: __init__.py  _matlab_license_guard.py  conftest.py  test_batch_a.py  test_batch_b.py  test_batch_c.py  test_batch_d.py  test_batch_e.py  test_cloud_admin.py  test_cloud_api.py  test_cloud_api_datasets.py  test_cloud_api_documents.py  test_cloud_download_live.py  test_cloud_filehandler.py  test_cloud_foundation.py  test_cloud_gaps.py  test_cloud_gaps_extra.py  test_cloud_hello_matlab.py  test_cloud_internals.py  test_cloud_live.py  test_cloud_matlab_license.py  test_cloud_read_ingested.py  test_cloud_sync.py  test_daq.py  test_database.py  test_database_utils.py  test_dataset_summary.py  test_document.py  test_element.py  test_fun.py  test_ido.py  test_matlab_regex.py  test_mock_version.py  test_ontology.py  test_phase1_gaps.py  test_phase2_gaps.py  test_phase8.py  test_phase9.py  test_query.py  test_session.py  (+2 more)
tests/matlab_tests/: MATLAB_TEST_MAPPING.md  conftest.py  test_app.py  test_calculator.py  test_carbon_fiber.py  test_cloud_api.py  test_cloud_compute.py  test_cloud_sync.py  test_core.py  test_dabrowska.py  test_daq.py  test_database.py  test_dataset.py  test_element.py  test_fun.py  test_ingestion.py  test_jess_haley.py  test_ontology.py  test_probe.py  test_session.py  test_utils.py  test_validators.py
tests/symmetry/: conftest.py
tutorials/: README.md  tutorial_67f723d574f5f79c6062389d.py  tutorial_682e7772cdf3f24938176fac.py
(+223 files in other folders)
