[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ndi"
version = "0.1.0"
description = "Neuroscience Data Interface - Python implementation"
readme = "README.md"
license = {text = "CC-BY-NC-SA-4.0"}
authors = [
    {name = "VH-Lab", email = "vhlab@brandeis.edu"}
]
maintainers = [
    {name = "Waltham Data Science"}
]
keywords = [
    "neuroscience",
    "data management",
    "experimental data",
    "database",
    "scientific computing"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.10"
dependencies = [
    "did @ git+https://github.com/VH-Lab/DID-python.git@main",
    "numpy>=1.20.0",
    "networkx>=2.6",
    "jsonschema>=4.0.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
docs = [
    "mkdocs>=1.4.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.20.0",
]
pandas = [
    "pandas>=1.5.0",
]
scipy = [
    "scipy>=1.9.0",
]
all = [
    "ndi[dev,docs,pandas,scipy]",
]

[project.urls]
Homepage = "https://github.com/Waltham-Data-Science/NDI-python"
Documentation = "https://waltham-data-science.github.io/NDI-python"
Repository = "https://github.com/Waltham-Data-Science/NDI-python"
Issues = "https://github.com/Waltham-Data-Science/NDI-python/issues"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ndi"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/ndi_common", "/tests", "/examples", "LICENSE", "README.md", "CHANGELOG.md", "MATLAB_MAPPING.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
